syntax = "proto3";

package proto;

option go_package = "github.com/dubbo/triple/internal/codec/proto";

message TripleRequestWrapper {
  // hessian4
  // json
  string serializeType = 1;
  repeated bytes args = 2;
  repeated string argTypes = 3;
}

message TripleResponseWrapper {
  string serializeType = 1;
  bytes data = 2;
  string type = 3;
}
